--- a/index.html
+++ b/index.html
@@ -49,27 +49,30 @@
         <div class="container-article">
           <div class="article">
             <i class="fas fa-pen-fancy"></i>
+            <h3>Web design</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
               possimus earum totam iure inventore aliquam?
             </p>
-            <a href="#">Read more ---></a>
+            <a href="#">Read more <i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
           <div class="article">
             <i class="fas fa-code"></i>
+            <h3>Graphic design</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
               possimus earum totam iure inventore aliquam?
             </p>
-            <a href="#">Read more ---></a>
+            <a href="#">Read more <i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
           <div class="article">
             <i class="fas fa-cog"></i>
+            <h3>hola:3</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
               possimus earum totam iure inventore aliquam?
             </p>
-            <a href="#">Read more ---></a>
+            <a href="#">Read more <i class="fa-solid fa-arrow-right-long"></i></a>
           </div>
         </div>
       </div>
@@ -87,7 +90,7 @@
     </section>
 
     <section class="results">
-      <div class="container content-result">
+      <div class="container1 content-result">
         <section class="numbers">
           <div class="number">
             <h4>45678</h4>
