--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
           <div class="logo">
             <img
               src="/img/Screenshot_from_2022-09-29_12-59-02-removebg-preview.png"
-              alt="" data-aos="fade-up"
+              alt=""
+              data-aos="fade-up"
             />
           </div>
           <div class="enlaces-header">
@@ -40,7 +41,11 @@
             </p>
             <a href="#">Learn more</a>
           </section>
-          <img src="/img/undraw_web_developer_re_h7ie.svg" alt="" data-aos="zoom-out-right"/>
+          <img
+            src="/img/undraw_web_developer_re_h7ie.svg"
+            alt=""
+            data-aos="zoom-out-right"
+          />
         </section>
       </div>
     </header>
@@ -93,34 +98,38 @@
         </p>
         <a href="#">Learn more</a>
       </section>
-      <img src="/img/undraw_static_website_re_x70h.svg" alt="" data-aos="zoom-out-right" />
+      <img
+        src="/img/undraw_static_website_re_x70h.svg"
+        alt=""
+        data-aos="zoom-out-right"
+      />
     </section>
 
     <section class="results">
       <div class="container1 content-result">
         <section class="numbers">
-          <div class="number">
+          <div class="number" data-aos="fade-down-right">
             <h4>45678</h4>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
               quod.
             </p>
           </div>
-          <div class="number">
+          <div class="number" data-aos="fade-down-right">
             <h4>45678</h4>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
               quod.
             </p>
           </div>
-          <div class="number">
+          <div class="number" data-aos="fade-down-right">
             <h4>45678</h4>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
               quod.
             </p>
           </div>
-          <div class="number">
+          <div class="number" data-aos="fade-down-right">
             <h4>45678</h4>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
@@ -140,7 +149,7 @@
     </section>
 
     <section class="container1 services">
-      <img src="img/undraw_design_stats_ne2k.svg" alt="" data-aos="zoom-out-right"/>
+      <img src="img/undraw_design_stats_ne2k.svg" alt="" data-aos="zoom-out-up"/>
       <div class="box-skills">
         <h4><i class="fa-regular fa-circle-check"></i>Web design</h4>
         <h4><i class="fa-regular fa-circle-check"></i>Web development</h4>
@@ -153,7 +162,8 @@
       <div class="partFooter">
         <img
           src="img/Screenshot_from_2022-09-29_12-59-02-removebg-preview.png"
-          alt="" data-aos="fade-up"
+          alt=""
+          data-aos="fade-up"
         />
       </div>
       <div class="partFooter">
@@ -178,6 +188,7 @@
         </div>
       </div>
     </footer>
+    <p>&copy; Roberto Bula - 2022</p>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script
       src="https://kit.fontawesome.com/a3dd4e0896.js"
