--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
       <nav>
         <section class="container nav">
           <div class="logo">
-            <img src="img/Logo.png" alt="" data-aos="fade-up" />
+            <a title="logotipo" href="#content-header">
+              <img src="img/Logo.png" alt="logotipo" data-aos="fade-up" />
+            </a>
           </div>
           <div class="enlaces-header">
             <a href="#content-header">Inicio</a>
-            <a href="#about-us">About us</a>
+            <a href="#habilities">Habilidades</a>
             <a href="#question">Question</a>
-            <a href="#results">Results</a>
+            <a href="#results">Proyectos</a>
+            <a href="#services">Services</a>
+            <a href="#partfooter">Contact</a>
           </div>
           <div class="hamburguer">
             <i class="fa-solid fa-bars"></i>
@@ -30,12 +34,29 @@
       <div class="container">
         <section class="content-header" id="content-header">
           <section class="text-header">
-            <h1>Our creativity is your success</h1>
+            <h1 data-aos="zoom-in-right">Hola, Soy Roberto Bula.</h1>
+            <h3>Desarrollador web</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
-              assumenda!
+              Amante de la tecnología, la programación y los videojuegos. me
+              considero una persona con gran capacidad para producir ideas
+              interesantes para crear aplicaciones web que no pasarán
+              desapercibidas.
             </p>
-            <a href="#">Learn more</a>
+            <a href="#" class="hero_cta">Learn more</a>
+          </section>
+
+          <section class="modal">
+            <div class="modal_container">
+              <img src="img/Web Developer_Outline.svg" class="image_modal" />
+              <h2 class="modal_tittle">Bienvenido</h2>
+              <p class="modal_p">
+                Soy desarrollador de software, actualmente me encuentro cursando
+                la carrera de ingeniería en sistemas la cual voy cursando 9no
+                semestre. Además soy especialista en seguridad en redes de
+                computadores.
+              </p>
+              <a href="#" class="modal_close"> X </a>
+            </div>
           </section>
           <img
             src="img/undraw_web_developer_re_h7ie.svg"
@@ -45,54 +66,112 @@
         </section>
       </div>
     </header>
-    <section class="about-us" id="about-us">
+    <section class="habilities" id="habilities">
       <div class="container1">
-        <h2 class="title">We provide a wide range</h2>
+        <h2 class="title">Habilidades</h2>
         <div class="container-article">
           <div class="article" data-aos="zoom-out-right">
-            <i class="fas fa-pen-fancy"></i>
-            <h3>Web design</h3>
+            <!-- <i class="fas fa-pen-fancy"></i> -->
+            <!-- <h3>Desarrollo web</h3> -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
-              possimus earum totam iure inventore aliquam?
+              <img
+                class="logo"
+                src="img/HTML5_logo_and_wordmark.svg.png"
+                alt="Html5"
+              />
+              <img
+                class="logo_css"
+                src="img/CSS3_logo_and_wordmark.svg.png"
+                alt="css"
+              />
+              <img
+                class="logo_js"
+                src="img/javascript-logo-8892AEFCAC-seeklogo.com.png"
+                alt="js"
+              />
             </p>
-            <a href="#"
+          </div>
+
+          <div class="article" data-aos="zoom-out-right">
+            <!-- <i class="fas fa-pen-fancy"></i>
+            <h3>Web design</h3> -->
+            <p>
+              <img
+                class="logo"
+                src="img/Angular_full_color_logo.svg.png"
+                alt="angular"
+              />
+              <img
+                class="logo_bootstrap"
+                src="img/Bootstrap_logo.svg.png"
+                alt="bootstrap"
+              />
+              <img
+                class="logo"
+                src="img/codeigniter-logo-png-transparent.png"
+                alt="codeigniter"
+              />
+              <img class="logo" src="img/React-icon.svg.png" alt="react" />
+            </p>
+            <!-- <a href="#"
               >Read more <i class="fa-solid fa-arrow-right-long"></i
-            ></a>
+            ></a> -->
+          </div>
+
+          <div class="article" data-aos="zoom-out-right">
+            <!-- <i class="fas fa-code"></i>
+            <h3>Graphic design</h3> -->
+            <p>
+              <img
+                src="img/nodejs-logo-FBE122E377-seeklogo.com.png"
+                alt="node"
+                class="logo"
+              />
+              <img src="img/PHP-logo.svg.png" alt="" class="logo_php" />
+              <img src="img/Java-logo.png" alt="" class="logo_java" />
+            </p>
+            <!-- <a href="#"
+              >Read more <i class="fa-solid fa-arrow-right-long"></i
+            ></a> -->
+          </div>
+          <div class="article git" data-aos="zoom-out-right">
+            <!-- <i class="fas fa-cog"></i>
+            <h3>hola:3</h3> -->
+            <p>
+              <img src="img/Git-Icon-1788C.png" alt="git" class="logo" />
+              <img src="img/github.png" alt="github" class="logo_github" />
+            </p>
+            <!-- <a href="#"
+              >Read more <i class="fa-solid fa-arrow-right-long"></i
+            ></a> -->
           </div>
           <div class="article" data-aos="zoom-out-right">
-            <i class="fas fa-code"></i>
-            <h3>Graphic design</h3>
+            <!-- <i class="fas fa-code"></i>
+            <h3>Graphic design</h3> -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
-              possimus earum totam iure inventore aliquam?
+              <img src="img/MySQL-logo.png" alt="mysql" class="logo" />
+              <img src="img/postgreSQL loog.png" alt="postgres" class="logo" />
+              <img src="img/MongoDB_Logo.svg.png" alt="mongodb" class="logo" />
             </p>
-            <a href="#"
+            <!-- <a href="#"
               >Read more <i class="fa-solid fa-arrow-right-long"></i
-            ></a>
-          </div>
-          <div class="article" data-aos="zoom-out-right">
-            <i class="fas fa-cog"></i>
-            <h3>hola:3</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
-              possimus earum totam iure inventore aliquam?
-            </p>
-            <a href="#"
-              >Read more <i class="fa-solid fa-arrow-right-long"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
       </div>
     </section>
     <section class="question container" id="question">
       <section class="text-question">
-        <h1>Our creativity is your success</h1>
+        <h1>Trabajemos juntos!</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
-          assumenda!
+          Anhelo unirme a un gran equipo de trabajo, para seguir perfeccionando
+          mis habilidades y seguir creciendo profesionalmente.
         </p>
-        <a href="#">Learn more</a>
+        <a
+          href="document/web developer - Roberto Bula.pdf"
+          download="web developer - Roberto Bula"
+          >Descargar cv</a
+        >
       </section>
       <img
         src="img/undraw_static_website_re_x70h.svg"
@@ -105,82 +184,99 @@
       <div class="container1 content-result">
         <section class="numbers">
           <div class="number" data-aos="fade-down-right">
-            <h4>45678</h4>
+            <h4>Financial web</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-              quod.
+              Financial web es un pequeño modulo financiero hecho con javascript
+              puro, en el cual se pueden calcular intereses para un prestamo a
+              determinado tiempo. Además muestra una tabla de amortización con
+              información relevante del prestamo.
             </p>
           </div>
           <div class="number" data-aos="fade-down-right">
-            <h4>45678</h4>
+            <h4>Login</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-              quod.
+              Login hecho en angular, acompañado del proveedor de servicios
+              firebase en el cual tenemos un sistema de autenticación de
+              usuarios. Además nos permite confirmar el usuario mediante el
+              email, solicitar un cambio de contraseña entre otras funciones.
             </p>
           </div>
           <div class="number" data-aos="fade-down-right">
-            <h4>45678</h4>
+            <h4>APP rick & morty</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-              quod.
+              Hecho con react js, la App rick & morty recopila datos de la API
+              publica Rick And Morty y mostrando en la vista la información
+              requerida de los personajes de esta serie.
             </p>
           </div>
           <div class="number" data-aos="fade-down-right">
-            <h4>45678</h4>
+            <h4>CRUD CI</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-              quod.
+              Un crud hecho en php, utizando el framework Codeigniter, el cual
+              se registran los usuarios y quedan guardados en una base de datos
+              con mysql, éste a su vez tiene la opción de editar y eliminar
+              dicha información de la base de datos.
             </p>
           </div>
         </section>
         <section class="results-text">
-          <h4>Lorem ipsum dolor sit amet.</h4>
+          <h4>Mis proyectos</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
-            harum maiores in?
+            A lo largo de mi carrera he trabajado en proyectos academicos y
+            otros personales, si quieres echar un vistazo.
           </p>
-          <a href="#">Ingrese aquí</a>
+          <a href="https://github.com/RobertoBula" target="_blank"
+            >Ingresa aquí</a
+          >
         </section>
       </div>
     </section>
 
-    <section class="container1 services">
+    <section class="container1 services" id="services">
       <img
         src="img/undraw_design_stats_ne2k.svg"
         alt=""
         data-aos="zoom-out-up"
       />
       <div class="box-skills">
-        <h4><i class="fa-regular fa-circle-check"></i>Web design</h4>
-        <h4><i class="fa-regular fa-circle-check"></i>Web development</h4>
-        <h4><i class="fa-regular fa-circle-check"></i>SEO</h4>
-        <h4><i class="fa-regular fa-circle-check"></i>Web support</h4>
+        <h4><i class="fa-solid fa-pen-fancy"></i>Desarrollador front-end</h4>
+        <h4><i class="fa-solid fa-code"></i>Desarrollador back-end</h4>
+        <h4><i class="fa-solid fa-mobile"></i>Diseño responsivo</h4>
       </div>
     </section>
 
-    <footer>
+    <footer id="partfooter">
       <div class="partFooter">
-        <img src="img/Logo.png" alt="" data-aos="fade-up" />
+        <a href="#content-header">
+          <img src="img/Logo.png" alt="logotipo" data-aos="fade-up"
+        /></a>
       </div>
       <div class="partFooter">
         <h4>Servicios</h4>
-        <a href="#">services 1</a>
-        <a href="#">services 2</a>
-        <a href="#">services 3</a>
+        <a href="#services">Desarrollador front-end</a>
+        <a href="#services">Desarrollador back-end</a>
+        <a href="#services">Diseño responsivo</a>
       </div>
       <div class="partFooter">
         <h4>Acerca de</h4>
-        <a href="#">About 1</a>
-        <a href="#">About 2</a>
-        <a href="#">About 3</a>
+        <a href="#content-header">Sobre mi</a>
+        <a href="#question">Trabaja conmigo</a>
       </div>
       <div class="partFooter">
         <h4>Redes sociales</h4>
         <div class="social-media">
-          <i class="fa-brands fa-facebook-f"></i>
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-github"></i>
+          <a href="https://www.facebook.com/MozRobertoCarlos" target="_blank">
+            <i class="fa-brands fa-facebook-f"></i
+          ></a>
+          <a href="https://twitter.com/MozRobertoCarl" target="_blank">
+            <i class="fa-brands fa-twitter"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/robertobula/" target="_blank">
+            <i class="fa-brands fa-linkedin-in"></i
+          ></a>
+          <a href="https://github.com/RobertoBula" target="_blank">
+            <i class="fa-brands fa-github"></i
+          ></a>
         </div>
       </div>
     </footer>
