--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <div class="enlaces-header">
             <a href="#content-header">Inicio</a>
             <a href="#habilities">Habilidades</a>
-            <a href="#question">Question</a>
+            <a href="#question">Curriculum</a>
             <a href="#results">Proyectos</a>
-            <a href="#services">Services</a>
-            <a href="#partfooter">Contact</a>
+            <a href="#services">Servicios</a>
+            <a href="#partfooter">Contacto</a>
           </div>
           <div class="hamburguer">
             <i class="fa-solid fa-bars"></i>
@@ -263,7 +263,7 @@
         <a href="#question">Trabaja conmigo</a>
       </div>
       <div class="partFooter">
-        <h4>Redes sociales</h4>
+        <h4>Contactame</h4>
         <div class="social-media">
           <a href="https://www.facebook.com/MozRobertoCarlos" target="_blank">
             <i class="fa-brands fa-facebook-f"></i
