--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               />
               <img
                 class="logo_js"
-                src="img/javascript-logo-8892AEFCAC-seeklogo.com.png"
+                src="img/jslogo.png"
                 alt="js"
               />
             </p>
