--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Página web, Html5 + Css + Js</title>
+    <title>Roberto Bula, web developer</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="shortcut icon" href="img/Logo.ico" type="image/x-icon" />
@@ -21,10 +21,10 @@
           <div class="enlaces-header">
             <a href="#content-header">Inicio</a>
             <a href="#habilities">Habilidades</a>
-            <a href="#question">Curriculum</a>
-            <a href="#results">Proyectos</a>
+            <a href="#aboutme-2">Curriculum</a>
+            <a href="#projects">Proyectos</a>
             <a href="#services">Servicios</a>
-            <a href="#partfooter">Contacto</a>
+            <a href="#contact">Contacto</a>
           </div>
           <div class="hamburguer">
             <i class="fa-solid fa-bars"></i>
@@ -84,11 +84,7 @@
                 src="img/CSS3_logo_and_wordmark.svg.png"
                 alt="css"
               />
-              <img
-                class="logo_js"
-                src="img/jslogo.png"
-                alt="js"
-              />
+              <img class="logo_js" src="img/jslogo.png" alt="js" />
             </p>
           </div>
 
@@ -160,7 +156,7 @@
         </div>
       </div>
     </section>
-    <section class="question container" id="question">
+    <section class="question container" id="aboutme-2">
       <section class="text-question">
         <h1>Trabajemos juntos!</h1>
         <p>
@@ -180,7 +176,7 @@
       />
     </section>
 
-    <section class="results" id="results">
+    <section class="results" id="projects">
       <div class="container1 content-result">
         <section class="numbers">
           <div class="number" data-aos="fade-down-right">
@@ -209,13 +205,15 @@
               requerida de los personajes de esta serie.
             </p>
           </div>
+
           <div class="number" data-aos="fade-down-right">
-            <h4>CRUD CI</h4>
+            <a href="https://whimsical-hamster-bfee04.netlify.app/" target="_blank">
+              <h4>Movies</h4>
+            </a>
             <p>
-              Un crud hecho en php, utizando el framework Codeigniter, el cual
-              se registran los usuarios y quedan guardados en una base de datos
-              con mysql, éste a su vez tiene la opción de editar y eliminar
-              dicha información de la base de datos.
+              Un buscador de peliculas, está realizado con angular v14,
+              recolectando información de una API de peliculas y mostrando la
+              información solicitada de cada pelicula.
             </p>
           </div>
         </section>
@@ -245,7 +243,7 @@
       </div>
     </section>
 
-    <footer id="partfooter">
+    <footer id="contact">
       <div class="partFooter">
         <a href="#content-header">
           <img src="img/Logo.png" alt="logotipo" data-aos="fade-up"
@@ -260,7 +258,7 @@
       <div class="partFooter">
         <h4>Acerca de</h4>
         <a href="#content-header">Sobre mi</a>
-        <a href="#question">Trabaja conmigo</a>
+        <a href="#aboutme-2">Trabaja conmigo</a>
       </div>
       <div class="partFooter">
         <h4>Contactame</h4>
