--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <section class="results" id="projects">
       <div class="container1 content-result">
         <section class="numbers">
-          <div class="number" data-aos="fade-down-right">
+          <!-- <div class="number" data-aos="fade-down-right">
             <h4>Financial web</h4>
             <p>
               Financial web es un pequeño modulo financiero hecho con javascript
@@ -187,7 +187,7 @@
               determinado tiempo. Además muestra una tabla de amortización con
               información relevante del prestamo.
             </p>
-          </div>
+          </div> -->
           <div class="number" data-aos="fade-down-right">
             <a href="https://relaxed-eclair-b7f334.netlify.app/login" target="_blank">
             <h4>Login</h4>
